# mijiaAPI_V2

./: .gitignore  README.md  mypy.ini  pyproject.toml
configs/: README.md  mijiaAPI.toml.template
docs/: README.md  故障排查指南.md
docs/API参考/: 04-配置选项.md
docs/使用指南/: 03-配置说明.md  04-最佳实践.md
docs/开发指南/: 04-测试覆盖率报告.md
examples/: 05_scene_control.py  09_configuration.py  10_cache_management.py
mijiaAPI_V2/: api_client.py
mijiaAPI_V2/repositories/: __init__.py  device_spec_repository.py  interfaces.py  scene_repository.py
mijiaAPI_V2/services/: scene_service.py
tests/integration/: test_factory_integration.py
tests/unit/: test_async_http_client.py  test_credential_store.py  test_http_protocol.py  test_property_translations.py  test_scene_service.py
tests/unit/repositories/: test_async_device_repository.py  test_device_spec_repository.py  test_scene_repository.py
